fix: remediate top 3 CRITICAL AI SAST findings in training endpoints
Fixes the highest-severity (18/19) AI SAST findings surfaced by Endor for
this project. Each patch mirrors the existing secure* sibling endpoint in
the same file:

- CWE-78 OS command injection (insecureCommand): host allowlist + ProcessBuilder
  argv instead of Runtime.exec on a concatenated string.
- CWE-502 insecure deserialization (insecure_yaml): yaml.safe_load instead of
  the full yaml.Loader.
- CWE-89 SQL injection (insecureSql): bound :username parameter instead of
  string concatenation into a native query.

Endor findings: 6a60cdef5beb5fb71345648d, 6a60cdef5beb5fb71345648e,
6a60cdefecffc5da2e6b1e18.

Note: these are TRAINING/demo endpoints intentionally paired with secure
siblings; hardening them removes the vulnerable/secure teaching contrast.